k8s/app.yml
apiVersion: v1
kind: Service
metadata:
  name: fhir
spec:
  selector:
    app: fhir
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fhir
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fhir
  template:
    metadata:
      labels:
        app: fhir
    spec:
      containers:
        - name: fhir
          image: quay.io/jswanepo/hapi-js
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: registry.redhat.io/rhel9/postgresql-15
          ports:
            - containerPort: 5432
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fhir-route
spec:
  to:
    kind: Service
    name: fhir
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
